@@ -2,6 +2,7 @@
   - (finally!) parse Postgres CAST syntax 'value::type' properly in colon
     prefix statements
   - fix @SqlBatch hanging if you forget to include an Iterable-like param
+  - @UseStringTemplate3StatementLocator now caches created locators
 
 2.72
   - Support for the ability to provide a list of the column names returned
